Fix - Design issue of spacing while latest posts

--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -496,7 +496,7 @@ a:focus {
 	outline: 0;
 }
 
-#content {
+.blog .site-content {
 	margin-top: 30px;
 }
 
